--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -9,7 +9,7 @@
     width: 300px;
     min-width: 300px;
     display: flex;
-    height: 40px;
+    height: 39px;
     padding-left: 40px;
     border-bottom: 1px solid lightgray;
     border-right: 1px solid lightgray;
@@ -47,12 +47,12 @@
     padding: 5px 13px;
     margin-top: 15px;
     display: inline-flex;
-    background: pink;
+    background: rgb(255, 153, 153);
     color: #fff;
 }
 
 .List__person:nth-of-type(odd) .List-person__name {
-    background: lightblue;
+    background: rgb(179, 217, 255);
 }
 
 .List-person__task {
